# 3xui-aiogram-bot

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .hadolint.yaml  DOCKER_README.md  Dockerfile  Dockerfile.admin  add_admin.py  add_server_from_env.py  admin_run.py  backup-db.ps1  backup-db.sh  clear_db.py  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  docker-scripts.ps1  docker-scripts.sh  fix_trial_plan.py  init_db.py  migrate_db.py  mypy.ini  pyproject.toml  readme.md  recovered_key.txt  run.py  setup_admin.py  sync_trials.py
.github/: CI_CD_SETUP.md
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  handlers.py  keyboards.py  utils.py
app/api/: three_x_ui.py
app/database/: models.py  requests.py
app/handlers/: __init__.py  payment.py  profile.py  start.py  subscription.py  support.py
app/handlers/admin/: __init__.py  servers.py  subscriptions.py  users.py
app/keyboards/: __init__.py  admin.py  inline.py  reply.py
app/middlewares/: __init__.py  admin_auth.py  clean_messages.py
app/services/: __init__.py  referral.py  subscription.py
app/utils/: __init__.py  admin_utils.py  messages.py  vpn.py
