[project]
name = "pythonproject"
version = "0.1.0"
description = "VPN Telegram Bot with Docker support"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0",
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
